<resources>
    <string name="app_name">NeverPidor</string>
    <string name="beer">Пиво</string>
    <string name="snacks">Закуски</string>
    <string name="update">Изменить</string>
    <string name="alcPercentage">Алк.: %1$s%% </string>
    <string name="welcome_toast">Добро пожаловать, %1$s!</string>
    <string name="price">%1$s P.</string>
    <string name="sale_percentage">-%1$s%%</string>
    <string name="weight">%1$s г.</string>
    <string name="changing_item">Изменяем %1$s</string>
    <string name="low_price_field">Цена слишком низкая</string>
    <string name="high_weight_field">Слишком большой вес</string>
    <string name="low_weight_field">Слишком маленький вес</string>
    <string name="high_price_field">Цена слишком высокая</string>
    <string name="high_sale_percentage">Скидка слишком высокая</string>
    <string name="high_alc_field">Слишком много алкоголя для пива</string>
    <string name="add_snack">Добавить закуски</string>
    <string name="add_beer">Добавить пиво</string>
    <string name="check_connection">Проверьте подключение к интернету!</string>
    <string name="error">Ой, ошибочка</string>
    <string name="title">Название</string>
    <string name="description">Описание</string>
    <string name="type">Тип</string>
    <string name="price_hint">Цена</string>
    <string name="alc_hint">Сод. Алкоголя</string>
    <string name="discount_hint">Скидка</string>
    <string name="weight_hint">Вес</string>
    <string name="save">Сохранить</string>
    <string name="search">Поиск</string>
    <string name="city">Город: Кириши</string>
    <string name="street">Переулок Берёзовый 7 </string>
    <string name="related_products">С этим продуктом часто берут:</string>
    <string name="new_password_exception">Новый пароль должен отличаться от старого</string>
    <string name="passwords_should_match_exception">Пароли должны совпадать</string>
    <string name="wrong_password_exception">Неверный пароль</string>
    <string name="user_doesnt_exist_exception">Пользователь с данным номером не существует</string>
    <string name="user_already_exists_exception">Пользователь с данным номером уже существует</string>
    <string name="empty_field_exception">Данное поле не может быть пустым</string>
    <string name="invalid_input">Недопустимый ввод</string>
    <string name="order_toast">Заказ отправлен!</string>
    <string name="need_to_login_toast">Необходимо зайти в аккаунт</string>
    <string name="password_changed_toast">Пароль успешно изменен</string>
    <string name="name_changed_toast">Имя успешно изменено</string>
    <string name="account_deleted_toast">Аккаунт удален</string>
    <string name="short_password_exception">Слишком короткий пароль</string>
    <string name="acoount_created_toast">Аккаунт успешно создан</string>
    <string name="nothing_to_show">Здесь пока ничего нет!</string>
    <string name="to_menu">В меню</string>
    <string name="full_price">Итого</string>
    <string name="order">Заказать</string>
    <string name="log_in_to_account">Войдите в аккаунт</string>
    <string name="phone_number_hint">Номер телефона</string>
    <string name="password_hint">Пароль</string>
    <string name="log_in">Войти</string>
    <string name="first_time">Впервые здесь?</string>
    <string name="create_account">Создать аккаунт</string>
    <string name="add_update_button">Добавить/изменить</string>
    <string name="change_name">Изменить имя</string>
    <string name="name_hint">Имя</string>
    <string name="change_password">Изменить пароль</string>
    <string name="old_password">Старый пароль</string>
    <string name="new_password">Новый пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="repeat_new_password">Повторите новый пароль</string>
    <string name="delete_account">Удалить аккаунт</string>
    <string name="type_password">Введите пароль</string>
    <string name="delete">Удалить</string>
    <string name="couldnt_load_menu">Не удалось загрузить меню</string>
    <string name="check_connection_and_try_again">Проверьте подключение к интернету и попробуйте снова</string>
    <string name="try_again">Попробовать снова</string>
    <string name="logout">Выйти</string>
    <string name="already_have_account">Уже есть аккаунт?</string>
    <string name="register">Зарегистрироваться</string>
    <string name="registration">Регистрация</string>
    <string name="profile">Профиль</string>
    <string name="menu">Меню</string>
    <string name="favourites">Избранное</string>
    <string name="cart">Корзина</string>
</resources>