<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/amber_dark">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/changeNameCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="12dp"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/accent"
            app:strokeWidth="3dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

                <TextView
                    android:id="@+id/changeNameText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/change_name"
                    android:textSize="24sp"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textLayoutChangeName"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/changeNameText">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextChangeName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="14"
                        android:hint="@string/name_hint"
                        android:inputType="textPersonName"
                        android:maxLength="14"
                        tools:text="Jack" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/changeNameButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/save"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textLayoutChangeName" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <Space
            android:id="@+id/firstSpacer"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            app:layout_constraintTop_toBottomOf="@+id/changeNameCard" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/changePasswordCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="12dp"
            app:layout_constraintTop_toBottomOf="@id/firstSpacer"
            app:strokeColor="@color/accent"
            app:strokeWidth="3dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

                <TextView
                    android:id="@+id/changePasswordText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/change_password"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textLayoutOldPassword"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    app:layout_constraintTop_toBottomOf="@+id/changePasswordText"
                    tools:layout_editor_absoluteX="16dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextOldPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="15"
                        android:hint="@string/old_password"
                        android:inputType="textPassword"
                        android:maxLength="15"
                        tools:text="*********" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textLayoutNewPassword"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    app:layout_constraintTop_toBottomOf="@+id/textLayoutOldPassword"
                    tools:layout_editor_absoluteX="16dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextNewPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="15"
                        android:hint="@string/new_password"
                        android:inputType="textPassword"
                        android:maxLength="15"
                        tools:text="*********" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textLayoutRepeatNewPassword"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    app:layout_constraintTop_toBottomOf="@+id/textLayoutNewPassword"
                    tools:layout_editor_absoluteX="16dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextRepeatNewPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="15"
                        android:hint="@string/repeat_new_password"
                        android:inputType="textPassword"
                        android:maxLength="15"
                        tools:text="*********" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/changePasswordButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/save"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textLayoutRepeatNewPassword" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <Space
            android:id="@+id/secondSpacer"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            app:layout_constraintTop_toBottomOf="@+id/changePasswordCard" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/deleteUserCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="12dp"
            app:layout_constraintTop_toBottomOf="@id/secondSpacer"
            app:strokeColor="@color/accent"
            app:strokeWidth="3dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                    android:id="@+id/deleteUserText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/delete_account"
                    android:textSize="24sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textLayoutDeleteUserPassword"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    app:layout_constraintTop_toBottomOf="@+id/deleteUserText"
                    tools:layout_editor_absoluteX="16dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextDelete"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="15"
                        android:hint="@string/type_password"
                        android:inputType="textPassword"
                        android:maxLength="15"
                        tools:text="*********" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/deleteUserButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/delete"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textLayoutDeleteUserPassword" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>